# NVDA-Dev-Test-Toolbox

./: .pre-commit-config.yaml  appveyor.yml  buildVars.py  buildVars.py - Raccourci.lnk  changelog.md  cons dev=True -c  pyproject.toml  readme.md  sconstruct
.github/workflows/: build-and-test.yaml  build_addon.yml  build_addon.yml.old  checkTranslatorsComments.yml  checkpot-on-push.yaml  testWithNVDA.yaml  testWithNVDA.yaml.old  upload-on-tag.yaml
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fr/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/ro/: readme.md
addon/doc/ru/: readme.md
addon/doc/uk/: readme.md
addon/globalPlugins/ndtt/: __init__.py  baseObjectEx.py  beepError.py  compa.py  configNDTT.py  debugHelpMode.py  debugTool.py  debugTools.py  extScriptDesc.py  fileOpener.py  functionCallsLogging.py  layeredGestures.py  logManagement.py  logReader.py  ndttGui.py  objPropExplorer.py  pythonConsoleEx.py  restartWithOptions.py  reverseUITranslation.py  scriptOpener.py  securityUtils.py  speechOnDemand.py  stackTracing.py  startup.py  utils.py  windowutil.py
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
ci/: nvdaTestConfig.ini
ci/scripts/: checkLog.py  extractChangeLog.py
docs/l10n/: addonAuthors.md  addonTranslators.md
tools/: copyTemplate.ps1
